# gladius-masternode

./: .clabot  .dockerignore  .gitignore  .gometalinter.json  .travis.yml  Dockerfile  Gopkg.toml  Makefile  README.md  configure.ac  deploy-compose.yml  develop-compose.yml  develop.Dockerfile  docker-compose.yml  docker_entrypoint.sh  env.list.sample  go.mod  go.sum  make_release.sh  package-lock.json  preload_state.json  sample_config.toml  testnet.mn
cmd/: main.go
config/: config.go
html/: iframe_loader.html  loader.html  loader_min.html  loader_v2.html
internal/http/: http.go
internal/networking/: access.go  cache.go  geoip.go  networking.go  node.go  state.go  state_test.go
internal/networking/cache/: cache.go
internal/networking/state/: cache.go  geoip.go  node.go  state.go  state_test.go  what_to_do.txt
masternode/: index.js  masternode.go  package-lock.json  package.json
masternode/controller/: manager.js
masternode/public/js/: edgeLoader.js  md5.js
masternode/public/views/: index.html
masternode/views/: index.pug
nginx/sites-enabled/: masternode-server
src/: Cache.cpp  Cache.h  CachedRoute.cpp  CachedRoute.h  Config.cpp  Config.h  ContentCache.cpp  ContentCache.h  DirectHandler.cpp  DirectHandler.h  EdgeNode.cpp  EdgeNode.h  Geo.cpp  Geo.h  Location.h  Makefile.am  Masternode.cpp  Masternode.h  MasternodeConfig.h  MasternodeServer.cpp  NetworkState.cpp  NetworkState.h  ProxyHandler.cpp  ProxyHandler.h  ProxyHandlerFactory.cpp  ProxyHandlerFactory.h  RedirectHandler.cpp  RedirectHandler.h  RejectHandler.cpp  RejectHandler.h  Router.cpp  Router.h  ServiceWorker.cpp  ServiceWorker.h  ServiceWorkerHandler.cpp  ServiceWorkerHandler.h  autogen.sh  configure.ac  masternode.cpp
src/libs/: dep-licenses.txt  httplib.h
src/tests/: ConfigTests.cpp  EdgeNodeTests.cpp  GeoTests.cpp  LocationTests.cpp  Makefile.am  MasternodeTests.cpp  NetworkStateTests.cpp  TestRunner.cpp  TestUtils.h
src/tests/certs/: cert.pem  key.pem
testing_tools/post_echo/: app.js  docker-compose.yml  env.list  origin.Dockerfile  package.json
testing_tools/static_site/: docker-compose.yml  env.list  nginx.conf  origin.Dockerfile
testing_tools/static_site/content/: index.html  style.css
